2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-navigation-window-menus.c
	(update_tab_action_sensitivity), (tab_menu_action_activate_callback),
	(reload_tab_menu), (nautilus_navigation_window_sync_tab_menu_title):
	* src/nautilus-navigation-window.c (real_sync_title):
	* src/nautilus-window-private.h:
	Add tab list to Tabs menu. Use <Alt>(Num) keyboard accelerators to
	access first 10 tabs. Update tab list labels when slot title changes.
	Set labels in tab list to the title of the corresponding slot. Update
	the label when the slot title changes.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-history-sidebar.c (open_selected_item),
	(row_activated_callback), (button_press_event_callback),
	(nautilus_history_sidebar_init):
	Middle click on entry in history sidebar to open in new tab.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/file-manager/fm-tree-view.c (button_pressed_callback):
	Middle click on entry in tree sidebar to open a new tab.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/file-manager/fm-tree-view.c (got_activation_uri_callback),
	(selection_changed_timer_callback), (fm_tree_view_activate_file),
	(fm_tree_view_open_cb), (fm_tree_view_open_in_new_tab_cb),
	(fm_tree_view_open_in_new_window_cb), (create_popup_menu):
	Add mnemonic to "Open in New Window" and add "Open in New Tab" in 
	tree view sidebar.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/nautilus-places-sidebar.c (bookmarks_button_press_event_cb):
	Middle click on entry in places sidebar to open a new tab.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* src/file-manager/fm-directory-view.c (directory_view_entries),
	(real_update_location_menu), (real_update_menus):
	Add mnemonics to "Open in New Window", "Open in New Tab", etc.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>

	* configure.in:
	Fixed typo, thanks Christopher Bratusek.

2008-06-08  Jared Moore  <jaredm@svn.gnome.org>
